crates/sdk/tests/macros/error_non_mergeable_field.stderr
error[E0277]: (calimero)> `calimero_storage::collections::UnorderedMap<std::string::String, Plain>` cannot be stored in replicated state — it is not a CRDT
  --> tests/macros/error_non_mergeable_field.rs:16:1
   |
16 | #[app::state]
   | ^^^^^^^^^^^^^ this type has no merge semantics
   |
   = help: the trait `Mergeable` is not implemented for `calimero_storage::collections::UnorderedMap<std::string::String, Plain>`
   = note: every `#[app::state]` field and every collection value must be `Mergeable` so replicas converge.
   = note: fixes: wrap a plain value in `LwwRegister<calimero_storage::collections::UnorderedMap<std::string::String, Plain>>` (last-write-wins) or `Counter`; use `UnorderedMap`/`UnorderedSet`/`Vector` for collections; or `#[derive(Mergeable)]` on your own struct (every field must itself be `Mergeable`).
   = help: the trait `Mergeable` is implemented for `S`
   = note: this error originates in the attribute macro `app::state` (in Nightly builds, run with -Z macro-backtrace for more info)
